<resources>
    <string name="app_name">ivatio</string>

    <!-- LoginActivity -->
    <string name="LoginLabel">Вход</string>
    <string name="btnLogin">Войти</string>
    <string name="btnRegister">Зарегестрироваться</string>
    <string name="btnReset">Сбросить БД</string>

    <!-- RegisterActivity -->
    <string name="RegisterLabel">Регистрация</string>
    <string name="realName">Реальное имя</string>
    <string name="Login">Логин</string>
    <string name="Password">Пароль</string>
    <string name="RetryPassword">Повтор пароля</string>
    <string name="Age">Возраст</string>
    <string name="City">Город</string>
    <string name="Email">em@il адрес</string>

    <!-- MsgActivity -->
    <string name="buttonYes">Да</string>
    <string name="buttonNo">Нет</string>
    <string name="buttonDelete">Удалить</string>
    <string name="buttonSend">Отправка</string>
    <string name="avatar">Аватарка</string>
    <string name="swapRole">Смена ролей</string>


    <string name="fieldEmpty">Поле пустое</string>
    <string name="nonEqual">Пароли не совпадают</string>
    <string name="successfulSelection">Удаление наиболее некорректных ответов произведено"</string>

    <!-- Ivor -->
    <string name="ivorNoAnswer">Слушай, давай поговорим о чем-нибудь другом...</string>
    <string name="ivorModeSTD">Ура, наконец-то! С чего начнём?</string>
    <string name="ivorModeUserSendNewKW">Хорошо, я слушаю новые ключевые слова</string>
    <string name="ivorModeUserSendNewAnswerForKW">Итак, теперь я буду тебе называть слова, кторые знаю. А ты напишешь ответы, которые считаешь нужным. Согласен? Начнём.</string>
    <string name="ivorSuccessfulAppendKW">Ключевое слово успешно запомнено.</string>
    <string name="ivorKWExisting">Ключевое слово уже существует!</string>
    <string name="ivorModeUserSendNewQuestion">Хорошо. Задавай свои вопросы.</string>
    <string name="ivorModeUserSendNewAnswerForQ">Теперь я буду сама задавать тебе вопросы, а ты придумай, как на них отвечать.</string>
    <string name="ivorSuccessfulAppendQ">Вопрос успешно добавлен.</string>
    <string name="ivorQExisting">Такой вопрос уже существует.</string>
    <string name="ivorSuccessfulAnswer">Ответ успешно принят. Продолжим. Что скажешь про:</string>
    <string name="ivorSuccessfulDelete">Запись успешно удалена</string>
    <string name="ivorSuccessfulSelection">Ура! Теперь разговор со мной будет ещё реалистичнее. Давно пора было избавиться от мусора в голове.</string>


    <!-- Toast -->
    <string name="noAction">Действий не задано</string>
    <string name="deprecated">Не рекомендуется удалять ответы вручную!</string>
    <string name="needEval">Необходимо оценить большее количество ответов</string>
    <string name="successfulSendSMS">СМС успешно отправлено</string>
    <string name="successfullSendEmail">Email успешно отправлен</string>



    <!-- DB  Tables -->
    <string name="question">Вопросы</string>
    <string name="answer">Ответы</string>
    <string name="append">Добавить</string>
    <string name="connect">Соеденить</string>
    <string name="keyWord">Ключевое слово</string>

    <string name="NULL">NULL</string>
    <string name="dialog">Диалог</string>
    <!-- MSG options menu -->
    <string name="modeStd">Простой диалог</string>
    <string name="modeUserSendAnswerForKeyWord">Ответы на KW</string>
    <string name="modeAddKeyWord">Добавление KW</string>
    <string name="modeAddQuestion">Добавление Q</string>
    <string name="modeUserSendAnswerForQuestion">Ответы на Q</string>
    <string name="selection">Селекция данных</string>

    <!-- Команды -->
    <string name="cmdCall">позвонить</string>
    <string name="cmdSendSMS">отправить sms</string>
    <string name="cmdSendEmail">отправить email</string>
    <string name="cmdSendGPS">отметить координаты</string>

    <!-- LoginService <-> LoginActivity -->
    <string name="NUll_BODY">Пришел некорректный ответ с сервера</string>
    <string name="IO_EXCEPTION_RESPONSE">Ошибка при разборе данных от сервера. Проверьте интернет.</string>
    <string name="USER_NOT_FOUND">Пользователь с такими логином и паролем не найден</string>

    <!-- RegisterActivity -->
    <string name="userSuccessfulAppend">Пользователь успешно добавлен</string>
    <string name="errorLoading">Ошибка при загрузке данных. Будет использована старая версия</string>
    <string name="successfulLoading">Данные с сервера успешно загружены</string>
    <string name="errorPost">Ошибка при отправке данных на сервер</string>
    <string name="successfulPost">Данные были успешно отправлены на сервер</string>
    <string name="successfulUpdate">Данные на сервере были успешно обновлены</string>
    <string name="setAddAnswerMode">Режим добавления ответов. Я жажду новых знаний!</string>
    <string name="setStdMode">Режим обычного диалога. Ура! Мы так давно не разговаривали!</string>
    <string name="modeAddAnswer">Добавить новые ответы</string>
</resources>
