<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:orientation="vertical"
    android:background="@color/bgLogin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/xxxText"
        android:text="@string/LoginLabel"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/ftLogin" />
    <EditText
        android:id="@+id/editLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50sp"
        android:layout_marginRight="50sp"/>
    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50sp"
        android:layout_marginRight="50sp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="@dimen/loginBtnW"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/bgButton"
        android:text="@string/btnLogin"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="@dimen/loginBtnW"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/bgButton"
        android:text="@string/btnRegister"
        android:textColor="@android:color/white"/>

</LinearLayout>