<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AnswerAndQuestionEditActivity"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editQuestion"
                    android:layout_width="157dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="16dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="@+id/buttonConnect"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttonConnect" />

                <Button
                    android:id="@+id/buttonAppendQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/append"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/editQuestion"
                    app:layout_constraintTop_toBottomOf="@+id/editQuestion" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="80dp"
                    android:layout_height="18dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/answer"
                    app:layout_constraintBottom_toTopOf="@+id/listAnswer"
                    app:layout_constraintEnd_toEndOf="@+id/listAnswer"
                    app:layout_constraintTop_toTopOf="parent" />

                <ListView
                    android:id="@+id/listQuestion"
                    android:layout_width="147dp"
                    android:layout_height="300dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/listAnswer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <ListView
                    android:id="@+id/listAnswer"
                    android:layout_width="147dp"
                    android:layout_height="300dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="33dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/listQuestion"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="80dp"
                    android:layout_height="18dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/question"
                    app:layout_constraintBottom_toTopOf="@+id/listQuestion"
                    app:layout_constraintStart_toStartOf="@+id/listQuestion"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/viewQuestion"
                    android:layout_width="147dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/viewAnswer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/listQuestion" />

                <TextView
                    android:id="@+id/viewAnswer"
                    android:layout_width="147dp"
                    android:layout_height="19dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/viewQuestion"
                    app:layout_constraintTop_toBottomOf="@+id/listAnswer" />

                <Button
                    android:id="@+id/buttonConnect"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/connect"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewAnswer" />

                <EditText
                    android:id="@+id/editAnswer"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="32dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/buttonConnect"
                    app:layout_constraintTop_toBottomOf="@+id/buttonConnect" />

                <Button
                    android:id="@+id/buttonAppendAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/append"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/editAnswer"
                    app:layout_constraintTop_toBottomOf="@+id/editAnswer" />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>